--- a/package.json
+++ b/package.json
@@ -1,31 +1,13 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
+  "name": "langsta-landing",
   "private": true,
-  "dependencies": {
-    "@types/node": "^15.14.9",
-    "@types/react": "^17.0.68",
-    "@types/react-dom": "^17.0.21",
-    "@types/react-router-dom": "^5.3.3",
-    "@types/styled-components": "^5.1.28",
-    "antd": "^4.24.14",
-    "i18next": "^19.9.2",
-    "i18next-browser-languagedetector": "^6.1.8",
-    "i18next-xhr-backend": "^3.2.2",
-    "react": "^18.2.0",
-    "react-awesome-reveal": "^3.8.1",
-    "react-dom": "^18.2.0",
-    "react-i18next": "^11.18.6",
-    "react-router-dom": "^5.3.4",
-    "react-scripts": "5.0.1",
-    "styled-components": "^5.3.11",
-    "typescript": "^4.9.5"
-  },
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -41,5 +23,31 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-i18next": "^11.18.6",
+    "react-router-dom": "^5.3.4",
+    "react-awesome-reveal": "^3.8.1",
+    "styled-components": "^5.3.11",
+    "antd": "^4.24.14",
+    "i18next": "^19.9.2",
+    "i18next-browser-languagedetector": "^6.1.8",
+    "i18next-xhr-backend": "^3.2.2"
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.3.2",
+    "@eslint/js": "^9.17.0",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "eslint": "^9.17.0",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.16",
+    "globals": "^15.14.0",
+    "typescript": "~5.1.2",
+    "typescript-eslint": "^8.18.2",
+    "vite": "^6.0.5"
   }
 }
